Fix theming of alignment

--- a/now-playing/theme_align-left.css
+++ b/now-playing/theme_align-left.css
@@ -10,5 +10,5 @@
 }
 
 .spotify_now-playing.in .spotify_play-indicator {
-    left: -50%;
+    left: 50%;
 }
